--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <nav>leader is in charge</nav>
-    <main></main>
+    <main>this is freshman in charge
+      hello
+      i am making my first project
+    </main>
     <footer></footer>
   </body>
 </html>
