--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>leader is in charge</nav>
+    <nav>leader is in charge
+        hahaha
+        hohoho
+        gogogo
+        huks. long long
+    </nav>
     <main></main>
     <footer></footer>
   </body>
