leader가 잘못해서 다시시

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>leader is in charge</nav>
     <main>this is freshman in charge
       hello
-      i am making my first project
+      i am making my first project  ß
     </main>
     <footer></footer>
   </body>
