--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>leader is in charge</nav>
     <main>this is freshman in charge
-      hello
+      hello2
       i am making my first project  ß
     </main>
     <footer></footer>
