--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>leader is in charge</nav>
+    <nav>leader is in charge
+      hahahahahah
+    </nav>
 
     <main>this is freshman in charge
       hello3
